--- a/djluchainz/package.json
+++ b/djluchainz/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-player": "^2.11.2",
+    "react-router-dom": "^6.8.1",
     "vercel": "^28.15.6",
     "video-react": "^0.16.0"
   },
