--- a/djluchainz/package.json
+++ b/djluchainz/package.json
@@ -12,8 +12,6 @@
     "@emailjs/browser": "^3.10.0",
     "@next/font": "^13.1.6",
     "daisyui": "^2.50.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -26,6 +24,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
   }
