--- a/djluchainz/package.json
+++ b/djluchainz/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.7.1",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.8.1",
+    "sharp": "^0.31.3",
     "vercel": "^28.15.6",
     "video-react": "^0.16.0"
   },
