--- a/djluchainz/.vscode/settings.json
+++ b/djluchainz/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "hccs",
         "Heropage",
+        "Inria",
         "luchainz",
         "Mediasounds",
         "nlma"
