--- a/djluchainz/package.json
+++ b/djluchainz/package.json
@@ -13,6 +13,7 @@
     "@fontsource/dosis": "^4.5.11",
     "@next/font": "^13.1.6",
     "daisyui": "^2.50.1",
+    "emailjs-com": "^3.2.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
